--- a/public/submitreq.html
+++ b/public/submitreq.html
@@ -34,7 +34,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="./index.html" title="">
+        <a class="navbar-brand" href="./submitreq.html" title="">
           <img src="./assets/images/mashup-icon.svg" class="navbar-logo-img" alt="">
          Dataship 
         </a>
@@ -42,11 +42,12 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="./index.html" title="">Home</a></li>
-          <li><a href="./project.html" title="">Project</a></li>
+          <li><a href="./submitreq.html" title="">Home</a></li>
+          <li><a href="./project.html" title="">Manage Accounts</a></li>
+          <li><a href="#" title="">Sign in</a></li>
           <li>
             <p>
-              <a href="./components.html" class="btn btn-default navbar-btn" title="">Components</a>
+              <a href="#" class="btn btn-default navbar-btn" title="">Sign up</a>
             </p>
           </li>
 
