--- a/public/project.html
+++ b/public/project.html
@@ -116,6 +116,8 @@
   document.addEventListener("DOMContentLoaded", function (event) {
     navActivePage();
     scrollRevelation('.reveal');
+    providerState = getPermissions();
+    updateProviderStates(providerState, "btn");
   });
 </script>
 
