--- a/public/project.html
+++ b/public/project.html
@@ -18,7 +18,6 @@
   <link href="./assets/favicon.ico" rel="icon">
 
   <link href="" rel="stylesheet">
-  <link href="./styles.css" rel="stylesheet">
   <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css
 " rel="stylesheet">
 
@@ -27,6 +26,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link href="./main.550dcf66.css" rel="stylesheet"></head>
 
+  <link href="./styles.css" rel="stylesheet">
 <body> <!-- Add your content of header -->
 <header>
   <nav class="navbar navbar-default active">
@@ -39,15 +39,16 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="./submitreq.html" title="">
-          <img src="./assets/images/mashup-icon.svg" class="navbar-logo-img" alt="">
-         Dataship 
+          <img src="./assets/images/logofull.png" width="300px" class="navbar-logo-img" alt="">
         </a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./submitreq.html" title="">Home</a></li>
-          <li><a href="./project.html" title="">Manage Accounts</a></li>
+          <li><a href="./project.html" title="">My Requests</a></li>
+          <li><a href="./cotracts.html" title="">My contract as provider</a></li>
+          <li class="little-left-margin"><a href="./mydata.html" title="">My data</a></li>
           <li><a href="#" title="">Sign in</a></li>
           <li>
             <p>
@@ -65,7 +66,8 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          
+
+            <h2 class="normalh2">My requests</h2>
 
             <table id="myrequests" class="display" width="100%" cellspacing="0">
                 <thead>
@@ -166,19 +168,6 @@
     });
 </script>
 
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
-
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-XXXXX-X', 'auto');
-  ga('send', 'pageview');
-</script>
-
---> <script type="text/javascript" src="./main.0cf8b554.js"></script></body>
+<script type="text/javascript" src="./main.0cf8b554.js"></script></body>
 
 </html>
