--- a/public/contracts.html
+++ b/public/contracts.html
@@ -47,7 +47,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./submitreq.html" title="">Home</a></li>
           <li><a href="./project.html" title="">My Requests</a></li>
-          <li><a href="./contracts.html" title="">My contract as provider</a></li>
+          <li><a href="./cotracts.html" title="">My contract as provider</a></li>
           <li class="little-left-margin"><a href="./mydata.html" title="">My data</a></li>
           <li><a href="#" title="">Sign in</a></li>
           <li>
