--- a/public/project.html
+++ b/public/project.html
@@ -48,7 +48,7 @@
           <li><a href="./submitreq.html" title="">Home</a></li>
           <li><a href="./project.html" title="">My Requests</a></li>
           <li><a href="./contracts.html" title="">My contract as provider</a></li>
-          <li class="little-left-margin"><a href="./mydata.html" title="">My data</a></li>
+          <li class="little-right-margin"><a href="./mydata.html" title="">My data</a></li>
           <li><a href="#" title="">Sign in</a></li>
           <li>
             <p>
