--- a/public/submitreq.html
+++ b/public/submitreq.html
@@ -35,15 +35,16 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="./submitreq.html" title="">
-          <img src="./assets/images/mashup-icon.svg" class="navbar-logo-img" alt="">
-         Dataship 
+          <img src="./assets/images/logofull.png" width="300px" class="navbar-logo-img" alt="">
         </a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./submitreq.html" title="">Home</a></li>
-          <li><a href="./project.html" title="">Manage Accounts</a></li>
+          <li><a href="./project.html" title="">My requests</a></li>
+          <li><a href="./accesscontrol.html" title="">Access control</a></li>
+          <li><a class="little-right-margin" href="./mydata.html" title="">My data</a></li>
           <li><a href="#" title="">Sign in</a></li>
           <li>
             <p>
