--- a/public/accesscontrol.html
+++ b/public/accesscontrol.html
@@ -21,14 +21,13 @@
   <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css
 " rel="stylesheet">
 
-  <title>Title page</title>
+  <title>Dataship</title>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link href="./main.550dcf66.css" rel="stylesheet"></head>
 
   <link href="./styles.css" rel="stylesheet">
 <body> <!-- Add your content of header -->
-<header>
   <nav class="navbar navbar-default active">
     <div class="container">
       <div class="navbar-header">
@@ -39,20 +38,21 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="./submitreq.html" title="">
-          <img src="./assets/images/logofull.png" width="300px" class="navbar-logo-img" alt="">
+          <img src="./assets/images/mashup-icon.svg" class="navbar-logo-img" alt="">
+         Dataship 
         </a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./submitreq.html" title="">Home</a></li>
-          <li><a href="./project.html" title="">My Requests</a></li>
-          <li><a href="./contracts.html" title="">My contract as provider</a></li>
-          <li class="little-right-margin"><a href="./mydata.html" title="">My data</a></li>
-          <li><a href="#" title="">Sign in</a></li>
+          <li><a href="./project.html" title="">My requests</a></li>
+          <li><a href="./contracts.html" title="">Contracts</a></li>
+          <li><a href="./accesscontrol.html" title="">Access Control</a></li>
+          <li><a href="./mydata.html" title="">My Data</a></li>
           <li>
             <p>
-              <a href="#" class="btn btn-default navbar-btn" title="">Sign up</a>
+              <a href="#" class="btn btn-default navbar-btn" title="">Sign out</a>
             </p>
           </li>
 
@@ -61,6 +61,7 @@
     </div>
   </nav>
 </header>
+
 
 <div class="section-container">
     <div class="container">
