--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,6 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
-
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
@@ -19,7 +17,7 @@
   <link href="styles.css" rel="stylesheet">
 
 
-  <title>Title page</title>
+  <title>Dataship</title>
 
 <link href="./main.550dcf66.css" rel="stylesheet"></head>
 
@@ -43,11 +41,13 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./submitreq.html" title="">Home</a></li>
-          <li><a href="./project.html" title="">Manage Accounts</a></li>
-          <li><a href="#" title="">Sign in</a></li>
+          <li><a href="./project.html" title="">My requests</a></li>
+          <li><a href="./contracts.html" title="">Contracts</a></li>
+          <li><a href="./accesscontrol.html" title="">Access Control</a></li>
+          <li><a href="./mydata.html" title="">My Data</a></li>
           <li>
             <p>
-              <a href="#" class="btn btn-default navbar-btn" title="">Sign up</a>
+              <a href="#" class="btn btn-default navbar-btn" title="">Sign out</a>
             </p>
           </li>
 
