--- a/public/project.html
+++ b/public/project.html
@@ -12,21 +12,17 @@
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <link href="" rel="stylesheet">
-  <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css
-" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 
-  <title>Title page</title>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <title>Dataship</title>
+
 <link href="./main.550dcf66.css" rel="stylesheet"></head>
 
-  <link href="./styles.css" rel="stylesheet">
 <body> <!-- Add your content of header -->
 <header>
   <nav class="navbar navbar-default active">
@@ -39,20 +35,21 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="./submitreq.html" title="">
-          <img src="./assets/images/logofull.png" width="300px" class="navbar-logo-img" alt="">
+          <img src="./assets/images/mashup-icon.svg" class="navbar-logo-img" alt="">
+         Dataship 
         </a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./submitreq.html" title="">Home</a></li>
-          <li><a href="./project.html" title="">My Requests</a></li>
-          <li><a href="./contracts.html" title="">My contract as provider</a></li>
-          <li class="little-right-margin"><a href="./mydata.html" title="">My data</a></li>
-          <li><a href="#" title="">Sign in</a></li>
+          <li><a href="./project.html" title="">My requests</a></li>
+          <li><a href="./contracts.html" title="">Contracts</a></li>
+          <li><a href="./accesscontrol.html" title="">Access Control</a></li>
+          <li><a href="./mydata.html" title="">My Data</a></li>
           <li>
             <p>
-              <a href="#" class="btn btn-default navbar-btn" title="">Sign up</a>
+              <a href="#" class="btn btn-default navbar-btn" title="">Sign out</a>
             </p>
           </li>
 
@@ -62,37 +59,107 @@
   </nav>
 </header>
 
-<div class="section-container">
+<!-- Add your site or app content here -->
+  <div class="hero-full-container background-image-container white-text-container">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 form-main">
+
+      <h1>I want to </h1>
+            <input type="text" id="action" 
+            list="action-datalist" 
+            placeholder="e.g. delete"
+            onmouseover="focus();" 
+             />
+            <datalist id="action-datalist">
+                <option value="Read"/>
+                <option value="Download"/>
+                <option value="Delete"/>
+            </datalist>
+            <h1>my data from </h1>
+            <input type="text" id="provider" 
+            list="provider-datalist" 
+            placeholder="e.g. Facebook"
+            onmouseover="focus();"
+            />
+            <datalist id="provider-datalist">
+                <option id="facebook" value="Facebook"/>
+                <option id="google-plus" value="Google Plus"/>
+                <option id="google-fit" value="Google Fit"/>
+            </datalist>
+            <h1>.</h1>
+
+          <a href="#" id="submit-request-button" class="btn btn-default btn-lg" title="">Submit request.</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="section-container">
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-
-            <h2 class="normalh2">My requests</h2>
-
-            <table id="myrequests" class="display" width="100%" cellspacing="0">
-                <thead>
-                <tr>
-                    <th>Company</th>
-                    <th>Request type</th>
-                    <th>State</th>
-                    <th>Due date</th>
-                </tr>
-                </thead>
-                <tfoot>
-                <tr>
-                    <th>Company</th>
-                    <th>Request type</th>
-                    <th>State</th>
-                    <th>Due date</th>
-                </tr>
-                </tfoot>
-            </table>
-
-
+          <div class="text-center">
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
+            <br>
+            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+          </div>
        </div>
       </div>
     </div>
   </div>
+
+  <div class="section-container contact-container">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-12">
+          <div class="section-container-spacer">
+            <h2 class="text-center">Get in touch</h2>
+            <p class="text-center">If you have questions about GDPR send us an email.</p>
+          </div>
+          <div class="card-container">
+            <div class="card card-shadow col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 reveal">
+              <form action="" class="reveal-content">
+                <div class="row">
+                  <div class="col-md-7">
+                    <div class="form-group">
+                      <input type="email" class="form-control" id="email" placeholder="Email">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" id="subject" placeholder="Subject">
+                    </div>
+                    <div class="form-group">
+                      <textarea class="form-control" rows="3" placeholder="Enter your message"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Send message</button>
+                  </div>
+                  <div class="col-md-5">
+                    <ul class="list-unstyled address-container">
+                      <li>
+                        <span class="fa-icon">
+                          <i class="fa fa-phone" aria-hidden="true"></i>
+                        </span>
+                        + 33 123 34 45 343                      </li>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <div class="card-image col-xs-12" style="background-image: url('/assets/images/img-01.jpg')">
+            </div>
+          </div>
+        </div>  
+      </div>
+    </div>
+  </div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function (event) {
+    navbarFixedTopAnimation();
+  });
+</script>
 
 <footer class="footer-container white-text-container">
   <div class="container">
@@ -107,7 +174,7 @@
             <p><small>Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></small>
             </p>
           </div>
-       </div>
+        </div>
         
         
       </div>
@@ -115,59 +182,53 @@
   </div>
 </footer>
 
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="./handle-logins.js"></script>
-<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
+
+<script>
+$(document).ready(function() {
+    $('#provider').on('input', function() {
+        var userText = $(this).val();
+
+        $("#provider-datalist").find("option").each(function() {
+            if ($(this).val() == userText) {
+                if (userText.includes("(need to login)")) {
+                    document.getElementById("submit-request-button").textContent = "Manage Accounts.";
+                    document.getElementById("submit-request-button").href = "./project.html";
+                } else {
+                    document.getElementById("submit-request-button").textContent = "Submit Request.";
+                    document.getElementById("submit-request-button").href = "#";
+                }
+            }
+        })
+    })
+});
+
+</script>
 
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
     navActivePage();
     scrollRevelation('.reveal');
+    providerState = getPermissions();
+    updateProviderStates(providerState, "submitreq")
   });
-
-    $(document).ready(function() {
-        var table = $('#myrequests').DataTable( {
-            "ajax": 'dumbdata.txt'
-        });
-
-        $('#myrequests tbody').on('click', 'tr', function () {
-            var data = table.row( this  ).data();
-
-            // dialog
-            var dialog = bootbox.dialog({
-            title: 'Take action',
-            message: "<p>This dialog has buttons. Each button has it's own callback function.</p>",
-            message: "<ul><li>Company: " + data[0] + "</li><li>Request type: " + data[1] + "</li><li>State: " + data[2] + "</li><li>Due date: " + data[3] + "</li></ul>",
-            buttons: {
-                cancel: {
-                    label: "Ping",
-                    className: 'btn-primary',
-                    callback: function(){
-                        Example.show('Custom cancel clicked');
-                    }
-                },
-                noclose: {
-                    label: "Stop",
-                    className: 'btn-primary',
-                    callback: function(){
-                        Example.show('Custom button clicked');
-                    }
-                },
-                ok: {
-                    label: "Report",
-                    className: 'btn-primary',
-                    callback: function(){
-                        Example.show('Custom OK clicked');
-                    }
-                }
-            }
-            });
-        } );
-    });
 </script>
 
-<script type="text/javascript" src="./main.0cf8b554.js"></script></body>
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
+
+<script>
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+  ga('create', 'UA-XXXXX-X', 'auto');
+  ga('send', 'pageview');
+</script>
+
+--> <script type="text/javascript" src="./main.0cf8b554.js"></script></body>
 
 </html>
