improve mydata page

--- a/public/mydata.html
+++ b/public/mydata.html
@@ -9,9 +9,12 @@
   <meta name="google" content="notranslate" />
   <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet"> 
+
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
+		<h1 style="margin-left: 100px; margin-top: -50px; font-family: 'Inconsolata', monospace; font-size: 24px;">MY DATA</h2>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
@@ -65,25 +68,13 @@
 <div class="section-container">
     <div class="container">
       <div class="row">
-		<h2 class="normalh2">My data</h2>
           <div class="col-md-4">
             <div class="list-group wizard-menu my-side-menu">
-                <a href="#" class="list-group-item active step-1-menu" data-for=".step-1">
-                    <h3 class="list-group-item-heading">Personal   
-                    </h3>
-                </a>
-                <a href="#" class="list-group-item step-2-menu" data-for=".step-2">
-                    <h3 class="list-group-item-heading">Social
-                    </h3>
-                </a>
-                <a href="#" class="list-group-item step-3-menu" data-for=".step-3">
-                    <h3 class="list-group-item-heading">Financial 
-                    </h3>
-                </a>
-                <a href="#" class="list-group-item step-4-menu" data-for=".step-4">
-                    <h3 class="list-group-item-heading">Health
-                    </h3>
-                </a>
+		<h1 style="margin-left: 100px; margin-top: -50px; font-family: 'Cabin', monospace; font-size: 24px;">MY DATA</h2>
+                <button class="btn btn-primary first">Personal</button>
+                <button class="btn btn-primary">Social </button>
+                <button class="btn btn-primary">Financial </button>
+                <button class="btn btn-primary last">Health </button>
             </div>
         </div>
         <div class="col-md-8 my-side-panel">
@@ -98,7 +89,7 @@
                 </ul>
             </div>
             <div>
-                <h4>Sources</h4>
+                <h4>Sources:</h4>
                 <ul>
                     <li><a>Reecho</a></li>
                     <li><a>Facebook</a></li>
@@ -106,6 +97,7 @@
                     <li><a>Tinder</a></li>
                 </ul>
             </div>
+            <img src="./assets/images/img-13.png" alt="">
         </div>
     </div>
   </div>
