--- a/public/accesscontrol.html
+++ b/public/accesscontrol.html
@@ -37,9 +37,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="./submitreq.html" title="">
-          <img src="./assets/images/mashup-icon.svg" class="navbar-logo-img" alt="">
-         Dataship 
+        <a class="navbar-brand" href="./index.html" title="">
+          <img src="./assets/images/logofull.png" width="300px" class="navbar-logo-img" alt="">
+           
         </a>
       </div>
 
@@ -52,7 +52,7 @@
           <li><a href="./mydata.html" title="">My Data</a></li>
           <li>
             <p>
-              <a href="#" class="btn btn-default navbar-btn" title="">Sign out</a>
+              <a href="http://dataship.eu/" class="btn btn-default navbar-btn" title="">Sign out</a>
             </p>
           </li>
 
@@ -101,11 +101,11 @@
 
      
       <div class="col-xs-12">
-        <h3>Mountain</h3>
+        <h3>Dataship</h3>
 
         <div class="row">
           <div class="col-xs-12 col-sm-7">
-            <p><small>Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></small>
+            <p><small>Data of people, to the people</small>
             </p>
           </div>
        </div>
