--- a/public/submitreq.html
+++ b/public/submitreq.html
@@ -41,11 +41,10 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="./submitreq.html" title="">Home</a></li>
+          <li><a href="./index.html" title="">New requests</a></li>
           <li><a href="./project.html" title="">My requests</a></li>
-          <li><a href="./contracts.html" title="">Contracts</a></li>
-          <li><a href="./accesscontrol.html" title="">Access control</a></li>
-          <li><a class="little-right-margin" href="./mydata.html" title="">My data</a></li>
+          <li><a href="./accesscontrol.html" title="">Access Control</a></li>
+          <li><a href="./mydata.html" title="">My Data</a></li>
           <li>
             <p>
               <a href="http://dataship.eu/" class="btn btn-default navbar-btn" title="">Sign out</a>
