--- a/public/mydata.html
+++ b/public/mydata.html
@@ -14,7 +14,6 @@
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
-		<h1 style="margin-left: 100px; margin-top: -50px; font-family: 'Inconsolata', monospace; font-size: 24px;">MY DATA</h2>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
@@ -24,13 +23,14 @@
   <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css
 " rel="stylesheet">
 
-  <title>Dataship</title>
+  <title>Dataship: My Data</title>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link href="./main.550dcf66.css" rel="stylesheet"></head>
 
   <link href="./styles.css" rel="stylesheet">
 <body> <!-- Add your content of header -->
+<header>
   <nav class="navbar navbar-default active">
     <div class="container">
       <div class="navbar-header">
@@ -40,22 +40,21 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="./index.html" title="">
+        <a class="navbar-brand" href="./submitreq.html" title="">
           <img src="./assets/images/logofull.png" width="300px" class="navbar-logo-img" alt="">
-         
         </a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./submitreq.html" title="">Home</a></li>
-          <li><a href="./project.html" title="">My requests</a></li>
-          <li><a href="./contracts.html" title="">Contracts</a></li>
-          <li><a href="./accesscontrol.html" title="">Access Control</a></li>
-          <li><a href="./mydata.html" title="">My Data</a></li>
+          <li><a href="./project.html" title="">My Requests</a></li>
+          <li><a href="./accesscontrol.html" title="">Access control</a></li>
+          <li><a href="./mydata.html" title="">My data</a></li>
+          <li><a href="#" title="">Sign in</a></li>
           <li>
             <p>
-              <a href="http://dataship.eu/" class="btn btn-default navbar-btn" title="">Sign out</a>
+              <a href="#" class="btn btn-default navbar-btn" title="">Sign up</a>
             </p>
           </li>
 
@@ -64,7 +63,6 @@
     </div>
   </nav>
 </header>
-
 
 <div class="section-container">
     <div class="container">
@@ -107,13 +105,13 @@
   <div class="container">
     <div class="row">
 
-
+     
       <div class="col-xs-12">
-        <h3>Dataship</h3>
+        <h3>Mountain</h3>
 
         <div class="row">
           <div class="col-xs-12 col-sm-7">
-            <p><small>Data of people, to the people</small>
+            <p><small>Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></small>
             </p>
           </div>
        </div>
