--- a/public/mydata.html
+++ b/public/mydata.html
@@ -53,7 +53,7 @@
           <li><a href="./mydata.html" title="">My Data</a></li>
           <li>
             <p>
-              <a href="#" class="btn btn-default navbar-btn" title="">Sign up</a>
+              <a href="#" class="btn btn-default navbar-btn" title="">Sign out</a>
             </p>
           </li>
 
