--- a/public/mydata.html
+++ b/public/mydata.html
@@ -95,7 +95,7 @@
                     <li><a>Tinder</a></li>
                 </ul>
             </div>
-            <img src="./assets/images/img-13.png" alt="">
+            <img src="./assets/images/img-13.png" width="600px" alt="">
         </div>
     </div>
   </div>
