add API documentation links

--- a/public/mydata.html
+++ b/public/mydata.html
@@ -40,7 +40,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="./submitreq.html" title="">
+        <a class="navbar-brand" href="./gdpr" title="">
           <img src="./assets/images/logofull.png" width="300px" class="navbar-logo-img" alt="">
         </a>
       </div>
@@ -106,12 +106,11 @@
 
      
       <div class="col-xs-12">
-        <h3>Mountain</h3>
+        <h3>Contribute to our project</h3>
 
         <div class="row">
           <div class="col-xs-12 col-sm-7">
-            <p><small>Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></small>
-            </p>
+              <a href="./doc.html">Read our documentation.</a>
           </div>
        </div>
         
