--- a/public/index.html
+++ b/public/index.html
@@ -104,9 +104,7 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="text-center">
             <h2>About Us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-            <br>
-            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+            <p>Data is the new oil. You are the data. However you are not in control. We at Dataship believe that you should be in control, and so does the EU. The soon to be enforced GDPR gives you new digital rights. We enable you to use your new rights.</p>
           </div>
        </div>
       </div>
