--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="./index.html" title="">New requests</a></li>
+          <li><a href="./index.html" title="">New request</a></li>
           <li><a href="./project.html" title="">My requests</a></li>
           <li><a href="./accesscontrol.html" title="">Access Control</a></li>
           <li><a href="./mydata.html" title="">My Data</a></li>
