remove menus, make provider input plain input

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 
                         <!-- navbar links -->
                         <li><a href="./index.html" title="">New request</a></li>
-                        <li><a href="./myrequests.html" title="">My requests</a></li>
+                        <!-- <li><a href="./myrequests.html" title="">My requests</a></li>
                         <li><a href="./accesscontrol.html" title="">Access Control</a></li>
                         <li><a href="./mydata.html" title="">My Data</a></li>
                         <li>
@@ -55,6 +55,7 @@
                                 <a href="http://dataship.eu/" class="btn btn-default navbar-btn" title="">Sign out</a>
                             </p>
                         </li>
+                        -->
 
                     </ul>
                 </div>
@@ -79,13 +80,7 @@
                         <option id="correct" value="correct" />
                     </datalist>
                     <h1>my data from </h1>
-                    <input type="text" id="provider" list="provider-datalist" placeholder="e.g. Facebook" onmouseover="focus();" />
-                    <datalist id="provider-datalist">
-                        <!-- some example providers -->
-                        <option id="facebook" value="Facebook" />
-                        <option id="google-plus" value="Google Plus" />
-                        <option id="google-fit" value="Google Fit" />
-                    </datalist>
+                    <input type="text" id="provider" placeholder="company's email" onmouseover="focus();" />
                     <h1></h1>
 
                     <a href="./myrequests.html" id="submit-request-button" class="btn btn-default btn-lg" title="">Submit Request.</a>
