--- a/public/myrequests.html
+++ b/public/myrequests.html
@@ -44,7 +44,7 @@
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="./index.html" title="">New request</a></li>
-                    <li><a href="./myrequests.html" title="">My requests</a></li>
+                    <!-- <li><a href="./myrequests.html" title="">My requests</a></li>
                     <li><a href="./accesscontrol.html" title="">Access Control</a></li>
                     <li><a href="./mydata.html" title="">My Data</a></li>
                     <li>
@@ -52,6 +52,7 @@
                             <a href="http://dataship.eu/" class="btn btn-default navbar-btn" title="">Sign out</a>
                         </p>
                     </li>
+                    -->
 
                 </ul>
             </div>
